[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-benchlab"
version = "0.1.0"
description = "Empirical benchmark harness for local AI inference runtimes, starting with deep llama.cpp support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "open-benchlab contributors" }]
keywords = ["llama.cpp", "GGUF", "benchmark", "local-llm", "MTP", "speculative-decoding"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Benchmark",
]
dependencies = [
  "huggingface-hub>=0.24",
  "httpx>=0.27",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
open-benchlab = "open_benchlab.cli:app"

[project.urls]
Homepage = "https://github.com/linus-ahlemeyer/open-benchlab"
Repository = "https://github.com/linus-ahlemeyer/open-benchlab"
Issues = "https://github.com/linus-ahlemeyer/open-benchlab/issues"

[tool.setuptools.packages.find]
include = ["open_benchlab*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "SIM117"]
